# Zadania-na-zajeciach

PJC/: CMakeLists.txt  analizaGrupyStudenckiej.cpp  analizaGrupyStudenckiej.h  guessNumber.cpp  guessNumber.h  isPrime.cpp  isPrime.h  main.cpp  operacjeNaZmiennychTekstowych.cpp  operacjeNaZmiennychTekstowych.h  reverseWord.cpp  reverseWord.h  reverseWords.cpp  reverseWords.h  zadanie1.cpp  zadanie1.h  zadanie2.cpp  zadanie2.h
PPJ/: .gitignore
src/: PPJAnalizaExercise.java  PPJAnalizaExerciseDuo.java
src/IfElse/: Program16.java  Program17.java  Program18.java  Program19.java
src/PPJ/: PPJAnalizaExercise.java
src/Powtorka_01/: cw1.java  cw10.java  cw11.java  cw12.java  cw2.java  cw3.java  cw4.java  cw5.java  cw6.java  cw7.java  cw8.java  cw9.java
src/Powtorka_01_Analiza/: I.java  II.java  III.java  IV.java  IX.java  V.java  VI.java  VII.java  VIII.java  X.java  XI.java
src/Powtorka_02/: cw1.java  cw2.java  cw3.java  cw4.java  cw5.java  cw6.java  cw7.java  cw8.java
src/SwtichPetle/: Main5.java  Main6.java  Main7.java  Main8.java  Main9.java
src/ppjz_05/: Program13.java  Program14.java  Program16.java  Program17.java  Program18.java  Program19.java
src/ppjz_06/: Main.java  Main2.java  Main3.java  Main4.java  Main5.java  Main6.java  Main7.java  Main8.java  Main9.java
src/ppjz_07/: cw1.java  cw2.java  cw3.java  cw4.java  cw5.java  cw6.java
src/ppjz_08/: cw1.java  cw2.java  cw3.java  cw4.java  cw5.java  cw6.java
src/ppjz_09/: cw1.java  cw2.java  cw3.java  cw4.java  cw5.java
src/ppjz_10/: cw1.java  cw2.java  cw3.java  cw4.java  cw5.java  (+1 more)
(+259 files in other folders)
